# trica

./: .gitignore  AUTHENTICATION-COMPLETE.md  Cargo.toml  DEBUG-AUTH-CALLBACK.md  DEPLOYMENT-GUIDE.md  EPIC-ANIMATED-LANDING-COMPLETE.md  FINAL-SUMMARY.md  NETLIFY-DEPLOY-FIX.md  OAUTH-SETUP-GUIDE.md  QUICK-DEPLOY-FIX.md  README.md  SUPABASE-INTEGRATION-COMPLETE.md  SUPABASE-SCHEMA.sql  SUPABASE-SETUP.md  ULTIMATE-MIND-DESTRUCTION-COMPLETE.md  benchmark.rs  blazing.trica  build.ps1  create_logo.py  dash.ts  simple.trica  supabase_rls_fix.sql  test-api.js  test-execute.js  test_speed.trica  tric.nsi  trica.nsi  ultra.trica  ultra_benchmark.rs  ultra_imports.trica
api/: README.md  package-lock.json  package.json  server.js
database/: setup.sql
examples/: advanced.trica  hello.trica
installer/: CHANGELOG.md  EnvVarUpdate.nsh  INSTALLER-README.md  LICENSE.txt  README.md  RELEASE-NOTES-1.0.0.md  build-installer.bat  build-installer.ps1  create_installer_assets.py  install.ps1  simple-installer.nsi  trica-compiler.exe.bat  trica-installer.nsi  trica-setup.nsi  trica.exe.bat
installer/.tpkg/neural_networks/: main.trica
installer/docs/: getting-started.md
installer/examples/: advanced_example.trica  hello_simple.tri  hello_universe.tri  hello_universe_fixed.c  hello_universe_fixed.trica  hello_working.c  hello_working.trica  quantum_sort.tri  test.tri  test.trica
src/: ast.rs  bytecode.rs  codegen.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  tpkg.rs  type_checker.rs
trica-engine/: Cargo.toml
trica-engine/src/: main.rs  vm.rs
website/: .env.local  build-website.ps1  deploy.ps1  index.html  netlify.toml  package.json  pnpm-lock.yaml  vite.config.js
website/netlify/functions/: README.md  api-execute.js  api-package-install.js  api-packages.js  api-reviews.js  api-stats.js  api-status.js  package-lock.json  package.json
website/public/: inkflow-sdk.js  manifest.json
website/src/: App.css  App.jsx  fix.cmd  index.css
website/src/components/: AnimatedLanding.css  AnimatedLanding.jsx  AnnouncementBanner.css  AnnouncementBanner.jsx  ApiDocs.css  ApiDocs.jsx  AuthCallback.css  AuthCallback.jsx  AuthModal.css  AuthModal.jsx  CodeExamples.css  CodeExamples.jsx  CommentsReviews.css  CommentsReviews.jsx  DancingCharacters.css  DancingCharacters.jsx  Documentation.css  Documentation.jsx  Download.css  Download.jsx  Features.css  Features.jsx  Footer.css  Footer.jsx  Header.css  Header.jsx  Hero.css  Hero.jsx  InkflowContent.jsx  LoadingScreen.css  LoadingScreen.jsx  MatrixRain.jsx  ParticleBackground.css  ParticleBackground.jsx  Performance.css  Performance.jsx  SoundEffects.jsx  TricaMusic.jsx  TryOnline.css  TryOnline.jsx  (+3 more)
(+10 files in other folders)
