[package]
name = "trica"
version = "1.0.0"
edition = "2021"
authors = ["Trica Team"]
description = "Ultra-fast statically-typed programming language"

[dependencies]
# Fast string interning for identifiers
string-interner = "0.17"

# High-performance collections
ahash = "0.8"
smallvec = "1.11"

# Error handling
thiserror = "1.0"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

[profile.release]
# Maximum optimization for the compiler itself
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
# Fast compilation during development
opt-level = 1