[package]
name = "trica"
version = "2.0.0"
edition = "2021"
authors = ["Trica Team"]
description = "🔥 LEGENDARY <900ns compilation language - The fastest compiling language on Earth! 🔥"

[dependencies]
# ULTRA-FAST MEMORY ALLOCATOR for <900ns execution
mimalloc = { version = "0.1", default-features = false }

# Fast string interning for identifiers
string-interner = "0.17"

# High-performance collections
ahash = "0.8"
smallvec = "1.11"
dashmap = "5.5"

# Error handling
thiserror = "1.0"

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# HTTP client for TPKG
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "trica"
path = "src/main.rs"

[[bin]]
name = "tpkg"
path = "src/bin/tpkg.rs"

[[bin]]
name = "benchmark"
path = "benchmark.rs"

[[bin]]
name = "ultra_benchmark"
path = "ultra_benchmark.rs"

[profile.release]
# LEGENDARY OPTIMIZATION for <900ns execution
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
overflow-checks = false

[profile.dev]
# Fast compilation during development
opt-level = 1

[profile.release.build-override]
opt-level = 3